style/styles.css
@font-face {
	font-family: "League Spartan";
	src: url("../fonts/leaguespartan-bold.eot");
	src: url("../fonts/leaguespartan-bold.eot?#iefix") format("embedded-opentype"),
		url("../fonts/leaguespartan-bold.woff2") format("woff2"),
		url("../fonts/leaguespartan-bold.woff") format("woff"),
		url("../fonts/leaguespartan-bold.ttf") format("truetype"),
		url("../fonts/leaguespartan-bold.svg#league_spartanbold") format("svg");
	font-weight: bold;
	font-style: normal;
}

* {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

html {
	border: .75em solid #fff;
	min-height: 100vh;
}

body {
	margin: 1.5em auto;
	width: 90%;
	max-width: 54em;
	font: normal normal 105%/1 "WorkSansRegular", sans-serif;
	background: #f7f7f5;
	color: #333;
}

/* Nicer link underlines */
a:link, a:visited {
	border-bottom: 1px solid rgba(42, 122, 130, .5);
	text-decoration: none;
	color: #2b7a82;
}

a:hover {
	border-bottom-color: #333;
	color: #333;
}

a:active {
	background: #333;
	color: #fff;
}

p, ul, ol {
	line-height: 1.4;
}

li + li {
	margin-top: .5em;
}

code {
	text-transform: none;
	font-family: Consolas, monaco, monospace;
}

/* Direct descendents = scoped to avoid test markup */
body > h1 {
	margin: 0;
	font: 1.75em/1 "WorkSansLight", sans-serif;
}

.meta h2,
.reference,
.test-title,
.code-title {
	font-weight: 700;
	font-family: "League Spartan", sans-serif;
	text-transform: uppercase;
	letter-spacing: 0.08em;
	line-height: 1.25;
}

.meta h2:before,
.meta li:before,
.test-title:before {
	display: block;
	position: absolute;
	left: 0;
	background: #333;
	content: "";
}

/* Criteria, reference, and code titles */
.meta h2,
.code-title {
	padding: 2.5em 0 1em; /* Needs to be padding so the test bg doesn't bleed through */
	font-size: .722em; /* 13px at large breakpoint */
}

/* Reference labels and code titles */
.reference li,
.code-title {
	color: #666;
}

/*	CRITERIA AND REFERENCE
 *	--------------------------------------------- */

.meta h2 {
	position: relative;
	margin: 3em 0 0;
	padding-top: 1.5em;
	border-top: 0;
}

.meta h2:before {
	top: 0;
	width: 2.5em;
	height: .5em;
}

/* Scoped to avoid tests */
.meta ul {
	margin: 0;
	padding: 0;
	list-style: none;
}

.meta li {
	position: relative;
}

.meta li:before {
	top: .5em;
	left: -12px;
	margin-top: 2px;
	width: 4px;
	height: 4px;
}

.reference li {
	white-space: nowrap;
	font-size: .611em; /* 11px */
	line-height: 2;
}

.reference a {
	white-space: normal;
}

/* Unset the styles on text next to links in references.
   Doing it this way to reduce excess markup. */
.reference a {
	font: 400 1.636em "WorkSansRegular", sans-serif;
	text-transform: none;
	letter-spacing: 0;
}

/*	TESTS
 *	20px measurements in here are to ensure white space around
 *  test content and code snippets.
 *	--------------------------------------------- */

.test {
	margin-top: 2em;
	background: hsla(0, 0%, 100%, .75);
}

.test > * {
	margin-right: 20px;
	margin-left: 20px;
}

.test-title,
.code-title {
	margin-right: 0;
	margin-left: 0;
	background: #f7f7f5;
}

.test-title {
	position: relative;
	margin: 0 0 20px;
	padding: 2em 0 1.333em 1.5em;
	font-size: 1.111em; /* 20px at large breakpoint */
}

.test-title:before {
	width: 1em;
	height: 1em;
}

/* Circle */
.test:nth-child(4n) .test-title:before {
	border-radius: .5em;
}

/* Triangle */
.test:nth-child(4n+1) .test-title:before {
	border-radius: 0;
	border-left: .5em solid transparent;
	border-right: .5em solid transparent;
	border-bottom: .825em solid #333;
	width: 0;
	height: 0;
	margin-top: .125em;
	background: transparent;
}

/* Diamond */
.test:nth-child(4n+2) .test-title:before {
	width: .75em;
	height: .75em;
	transform: rotate(45deg);
	margin-top: .125em;
}

.code-title {
	margin: 20px 0 0;
}

.test pre {
	margin-top: 20px;
	padding-bottom: 20px;
}

/*	SMALL BREAKPOINT
 *	--------------------------------------------- */

@media (max-width: 30em) {

	.meta li {
		padding-left: 12px;
	}

	.meta li:before {
		left: 0;
	}

}

/*	MEDIUM BREAKPOINT
 *	--------------------------------------------- */

@media (min-width: 50em) {

	html {
		border-width: 1.25em;
	}

	body {
		margin: 3.5em auto;
	}

	.meta:after {
		display: table;
		clear: both;
		content: "";
	}

	.criteria,
	.reference {
		position: relative;
		float: left;
		width: 50%;
	}

	.criteria {
		padding-right: 1em;
	}

	.reference {
		padding-left: 1em;
	}

}

/*	LARGE BREAKPOINT
 *	--------------------------------------------- */

@media (min-width: 75em) {

	/* @TODO: Test viewport-based type on a giant monitor to see where this breaks down */
	body {
		font-size: 112.5%;
	}

}

